--- a/package.json
+++ b/package.json
@@ -19,10 +19,11 @@
     "loopback-component-explorer": "^6.0.0",
     "loopback-connector-mongodb": "^5.2.3",
     "serve-favicon": "^2.0.1",
-    "strong-error-handler": "^2.0.0"
+    "strong-error-handler": "^2.0.0",
+    "swagger-ui": ">=3.23.11"
   },
   "devDependencies": {
-    "eslint": "^3.17.1",
+    "eslint": ">=4.18.2",
     "eslint-config-loopback": "^8.0.0"
   },
   "repository": {
